crates/aven-check/tests/fixtures/check/valid/literal-match-exhaustive.av
Status = @{"waiting", "running", "done"}

status : Status = "waiting"
result = status ?>
  "waiting" => 1
  "running" => 2
  "done" => 3

withDefault = status ?>
  "waiting" => 1
  _ => 0
