crates/aven-check/tests/fixtures/check/invalid/literal-not-in-union.av
status : @{"waiting", "running"} = "stopped"
code : @{0, 1, 2} = 3
